# SimpleFacturaSDK-python

./: .coverage  .env  Factura.json  LICENSE  MANIFEST.in  README.md  boleta.json  config.py  consultas.txt  dte.json  dte.xml  ejemplo_carga_masiva_nacional.csv  exportacion.json  exportaciones.json  factura.json  jsonsolicitud.json  pyproject.toml  requirements.txt  setup.py  sobre.xml  xml.xml
SimpleFacturaSDK/: Base.py  ClientSimpleFactura.py  client_simple_factura.py  main.py
SimpleFacturaSDK.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
SimpleFacturaSDK/SimpleFacturaSDK.egg-info/: PKG-INFO  SOURCES.txt
SimpleFacturaSDK/Test/: test_boletaHonorario_service.py  test_clientes_service.py  test_configuracion_service.py  test_facturacion_service.py  test_folios_service.py  test_producto_service.py  test_proveedor_service.py  test_sucursal_service.py
SimpleFacturaSDK/Utilidades/: Simplificar_error.py  Utilidades.py  auth_utils.py
SimpleFacturaSDK/enum/: Ambiente.py  CodigoIVANoRecuperable.py  FormaPago.py  IndicadorFacturacionExencion.py  IndicadorServicio.py  IndicadorSinCosto.py  OperacionDetalle.py  TipoAceptacion.py  TipoCertificado.py  TipoCuentaPago.py  TipoDTE.py  TipoDescuento.py  TipoDespacho.py  TipoEnvioLibro.py  TipoImpresion.py  TipoImpuesto.py  TipoLCE.py  TipoLibro.py  TipoMoneda.py  (+2 more)
Test/: test_boletaHonorario_service.py  test_clientes_service.py  test_facturacion_service.py  test_folios_service.py  test_producto_service.py  test_proveedor_service.py  test_sucursal_service.py
examples/: example.py
source/: conf.py  index.rst
(+252 files in other folders)
