[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SimpleFacturaSDK"
version = "1.2.0"
description = "SDK para la integración con los servicios de SimpleFactura"
readme = "README.md"
authors = [
    { name = "Carlos Perea", email = "pereacarlos685@gmail.com" }
]
license = { text = "MIT" }
keywords = ["dte", "factura", "boleta", "impuestos internos", "factura electrónica", "boleta electrónica", "documento", "iva", "SII", "documento tributario electrónico"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.6"
dependencies = [
    "aiohttp",
    "requests-toolbelt",
    "pydantic",
    "httpx",
    "requests",
    "python-dotenv",
    "aiofiles"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "requests-mock"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"SimpleFacturaSDK" = ["log.png"]